...
            
            Text("🐶 Dog Breeds")
                .font(.largeTitle)
                .bold()
                .frame(maxWidth: .infinity, alignment: .center)
                .padding(.vertical, 10)
                .accessibilityIdentifier("dogBreedsTitle")
                .foregroundStyle(Color.black)
            
            Image(systemName: "person.fill")
                .foregroundStyle(Color.black)
                .font(.system(size: 30)).onTapGesture {
                    router.navigate(to: .profileView)
...
                    .foregroundColor(.gray)
                
                TextField("Search dog breeds...", text: $searchText)
                    .padding(8)
                    .background(Color(.systemGray6))
                    .cornerRadius(10)
                    .accessibilityIdentifier("dogSearchField")
            }
            .padding(.horizontal, 16)
            .padding(.bottom, 8)
        }
    }
    
...
